// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUITextInput> General Functionality should have a qahook on the input and wrapper 1`] = `
<div
  className="xui-textinputwrapper"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <div
    className="xui-textinput xui-textinput-standard"
    data-automationid="input-test"
  >
    <input
      aria-describedby={undefined}
      aria-invalid={undefined}
      aria-label={undefined}
      aria-labelledby={undefined}
      className="xui-textinput--input xui-textinput--input-standard"
      data-automationid="input-test--input"
      defaultValue={undefined}
      disabled={undefined}
      id="testGeneratedId-control"
      onBlurCapture={[Function]}
      onChange={undefined}
      onFocusCapture={[Function]}
      placeholder={undefined}
      rows={undefined}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      type={undefined}
      value={undefined}
    />
  </div>
</div>
`;

exports[`<XUITextInput> Side elements should render side elements correctly 1`] = `
<div>
  <div
    className="xui-textinputwrapper"
    onClick={undefined}
    onKeyDown={undefined}
    role="presentation"
  >
    <div
      className="xui-textinput xui-textinput-standard"
      data-automationid={undefined}
    >
      <div
        className="xui-textinput--sideelement xui-textinput--sideelement-align-top xui-textinput--sideelement-icon"
        data-automationid={undefined}
      >
        <div
          className="xui-iconwrapper"
          data-automationid={undefined}
        >
          <svg
            className="xui-icon"
            data-automationid={undefined}
            focusable="false"
            height={17}
            viewBox="0 0 14 17"
            width={14}
          >
            <path
              d="M7 4A2 2 0 1 1 6.999.001 2 2 0 0 1 7 4zM0 6c0-.552.45-1 1.007-1h11.986a1.001 1.001 0 1 1-.002 2H10v9.005c0 .55-.444.995-1 .995-.552 0-1-.444-1-1v-4H6v4c0 .552-.444 1-1 1-.552 0-1-.456-1-.995V7H1.01C.451 7 0 6.556 0 6z"
              role="presentation"
            />
          </svg>
        </div>
      </div>
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-textinput--input xui-textinput--input-standard"
        data-automationid={undefined}
        defaultValue={undefined}
        disabled={undefined}
        id="testGeneratedId-control"
        onBlurCapture={[Function]}
        onChange={undefined}
        onFocusCapture={[Function]}
        placeholder={undefined}
        rows={undefined}
        style={
          Object {
            "maxHeight": undefined,
          }
        }
        type={undefined}
        value={undefined}
      />
    </div>
  </div>
  <div
    className="xui-textinputwrapper"
    onClick={undefined}
    onKeyDown={undefined}
    role="presentation"
  >
    <div
      className="xui-textinput xui-textinput-standard"
      data-automationid={undefined}
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-textinput--input xui-textinput--input-standard"
        data-automationid={undefined}
        defaultValue={undefined}
        disabled={undefined}
        id="testGeneratedId-control"
        onBlurCapture={[Function]}
        onChange={undefined}
        onFocusCapture={[Function]}
        placeholder={undefined}
        rows={undefined}
        style={
          Object {
            "maxHeight": undefined,
          }
        }
        type={undefined}
        value={undefined}
      />
      <div
        className="xui-textinput--sideelement xui-textinput--sideelement-align-top xui-textinput--sideelement-icon"
        data-automationid={undefined}
      >
        <div
          className="xui-iconwrapper"
          data-automationid={undefined}
        >
          <svg
            className="xui-icon"
            data-automationid={undefined}
            focusable="false"
            height={17}
            viewBox="0 0 14 17"
            width={14}
          >
            <path
              d="M7 4A2 2 0 1 1 6.999.001 2 2 0 0 1 7 4zM0 6c0-.552.45-1 1.007-1h11.986a1.001 1.001 0 1 1-.002 2H10v9.005c0 .55-.444.995-1 .995-.552 0-1-.444-1-1v-4H6v4c0 .552-.444 1-1 1-.552 0-1-.456-1-.995V7H1.01C.451 7 0 6.556 0 6z"
              role="presentation"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="xui-textinputwrapper"
    onClick={undefined}
    onKeyDown={undefined}
    role="presentation"
  >
    <div
      className="xui-textinput xui-textinput-standard"
      data-automationid={undefined}
    >
      <div
        className="xui-textinput--sideelement xui-textinput--sideelement-align-top xui-textinput--sideelement-icon"
        data-automationid={undefined}
      >
        <div
          className="xui-iconwrapper"
          data-automationid={undefined}
        >
          <svg
            className="xui-icon"
            data-automationid={undefined}
            focusable="false"
            height={17}
            viewBox="0 0 14 17"
            width={14}
          >
            <path
              d="M7 4A2 2 0 1 1 6.999.001 2 2 0 0 1 7 4zM0 6c0-.552.45-1 1.007-1h11.986a1.001 1.001 0 1 1-.002 2H10v9.005c0 .55-.444.995-1 .995-.552 0-1-.444-1-1v-4H6v4c0 .552-.444 1-1 1-.552 0-1-.456-1-.995V7H1.01C.451 7 0 6.556 0 6z"
              role="presentation"
            />
          </svg>
        </div>
      </div>
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-textinput--input xui-textinput--input-standard"
        data-automationid={undefined}
        defaultValue={undefined}
        disabled={undefined}
        id="testGeneratedId-control"
        onBlurCapture={[Function]}
        onChange={undefined}
        onFocusCapture={[Function]}
        placeholder={undefined}
        rows={undefined}
        style={
          Object {
            "maxHeight": undefined,
          }
        }
        type={undefined}
        value={undefined}
      />
      <div
        className="xui-textinput--sideelement xui-textinput--sideelement-align-top xui-textinput--sideelement-icon"
        data-automationid={undefined}
      >
        <div
          className="xui-iconwrapper"
          data-automationid={undefined}
        >
          <svg
            className="xui-icon"
            data-automationid={undefined}
            focusable="false"
            height={17}
            viewBox="0 0 14 17"
            width={14}
          >
            <path
              d="M7 4A2 2 0 1 1 6.999.001 2 2 0 0 1 7 4zM0 6c0-.552.45-1 1.007-1h11.986a1.001 1.001 0 1 1-.002 2H10v9.005c0 .55-.444.995-1 .995-.552 0-1-.444-1-1v-4H6v4c0 .552-.444 1-1 1-.552 0-1-.456-1-.995V7H1.01C.451 7 0 6.556 0 6z"
              role="presentation"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<XUITextInput> Text-only input forces resize visible class based on options passed in 1`] = `
<div
  className="xui-textinputwrapper"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <div
    className="xui-textinput xui-textinput-standard"
    data-automationid={undefined}
  >
    <textarea
      aria-describedby={undefined}
      aria-invalid={undefined}
      aria-label={undefined}
      aria-labelledby={undefined}
      className="xui-textinput--input xui-textinput--input-standard xui-textinput--input-resize-vertical"
      data-automationid={undefined}
      defaultValue={undefined}
      disabled={undefined}
      id="testGeneratedId-control"
      onBlurCapture={[Function]}
      onChange={undefined}
      onFocusCapture={[Function]}
      placeholder={undefined}
      rows={3}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      type={undefined}
      value={undefined}
    />
  </div>
</div>
`;

exports[`<XUITextInput> Text-only input has a qaHook 1`] = `
<div
  className="xui-textinputwrapper"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <div
    className="xui-textinput xui-textinput-standard"
    data-automationid="givenQAHook"
  >
    <input
      aria-describedby={undefined}
      aria-invalid={undefined}
      aria-label={undefined}
      aria-labelledby={undefined}
      className="xui-textinput--input xui-textinput--input-standard"
      data-automationid="givenQAHook--input"
      defaultValue={undefined}
      disabled={undefined}
      id="testGeneratedId-control"
      onBlurCapture={[Function]}
      onChange={undefined}
      onFocusCapture={[Function]}
      placeholder={undefined}
      rows={undefined}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      type={undefined}
      value={undefined}
    />
  </div>
</div>
`;

exports[`<XUITextInput> Text-only input has disabled styling 1`] = `
<div
  className="xui-textinputwrapper"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <div
    className="xui-textinput xui-textinput-standard xui-textinput-is-disabled"
    data-automationid={undefined}
  >
    <input
      aria-describedby={undefined}
      aria-invalid={undefined}
      aria-label={undefined}
      aria-labelledby={undefined}
      className="xui-textinput--input xui-textinput--input-standard"
      data-automationid={undefined}
      defaultValue={undefined}
      disabled={true}
      id="testGeneratedId-control"
      onBlurCapture={[Function]}
      onChange={undefined}
      onFocusCapture={[Function]}
      placeholder={undefined}
      rows={undefined}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      type={undefined}
      value={undefined}
    />
  </div>
</div>
`;

exports[`<XUITextInput> Text-only input includes custom classes on the correct nodes 1`] = `
<div
  className="custom-field-class xui-textinputwrapper"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <label
    className="custom-label-class xui-text-label xui-fieldlabel-layout"
    data-automationid={undefined}
    htmlFor="testLabel-control"
    id={undefined}
  >
    test
  </label>
  <div
    className="custom-container-class xui-textinput xui-textinput-standard"
    data-automationid={undefined}
  >
    <input
      aria-describedby={undefined}
      aria-invalid={undefined}
      aria-label={undefined}
      aria-labelledby={undefined}
      className="custom-input-class xui-textinput--input xui-textinput--input-standard"
      data-automationid={undefined}
      defaultValue={undefined}
      disabled={undefined}
      id="testLabel-control"
      onBlurCapture={[Function]}
      onChange={undefined}
      onFocusCapture={[Function]}
      placeholder={undefined}
      rows={undefined}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      type={undefined}
      value={undefined}
    />
  </div>
</div>
`;

exports[`<XUITextInput> Text-only input renders with a hidden label when one is provided 1`] = `
<div
  className="xui-textinputwrapper"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <div
    className="xui-textinput xui-textinput-standard"
    data-automationid={undefined}
  >
    <input
      aria-describedby={undefined}
      aria-invalid={undefined}
      aria-label="test"
      aria-labelledby={undefined}
      className="xui-textinput--input xui-textinput--input-standard"
      data-automationid={undefined}
      defaultValue={undefined}
      disabled={undefined}
      id="testGeneratedId-control"
      onBlurCapture={[Function]}
      onChange={undefined}
      onFocusCapture={[Function]}
      placeholder={undefined}
      rows={undefined}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      type={undefined}
      value={undefined}
    />
  </div>
</div>
`;

exports[`<XUITextInput> Text-only input renders with a label when one is provided 1`] = `
<div
  className="xui-textinputwrapper"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <label
    className="xui-text-label xui-fieldlabel-layout"
    data-automationid={undefined}
    htmlFor="testLabel-control"
    id={undefined}
  >
    test
  </label>
  <div
    className="xui-textinput xui-textinput-standard"
    data-automationid={undefined}
  >
    <input
      aria-describedby={undefined}
      aria-invalid={undefined}
      aria-label={undefined}
      aria-labelledby={undefined}
      className="xui-textinput--input xui-textinput--input-standard"
      data-automationid={undefined}
      defaultValue={undefined}
      disabled={undefined}
      id="testLabel-control"
      onBlurCapture={[Function]}
      onChange={undefined}
      onFocusCapture={[Function]}
      placeholder={undefined}
      rows={undefined}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      type={undefined}
      value={undefined}
    />
  </div>
</div>
`;

exports[`<XUITextInput> Text-only input sets the resize none class based on options passed in 1`] = `
<div
  className="xui-textinputwrapper"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <div
    className="xui-textinput xui-textinput-standard"
    data-automationid={undefined}
  >
    <textarea
      aria-describedby={undefined}
      aria-invalid={undefined}
      aria-label={undefined}
      aria-labelledby={undefined}
      className="xui-textinput--input xui-textinput--input-standard xui-textinput--input-resize-none"
      data-automationid={undefined}
      defaultValue={undefined}
      disabled={undefined}
      id="testGeneratedId-control"
      onBlurCapture={[Function]}
      onChange={undefined}
      onFocusCapture={[Function]}
      placeholder={undefined}
      rows={3}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      type={undefined}
      value={undefined}
    />
  </div>
</div>
`;

exports[`<XUITextInput> Validation and hints renders invalid textinputs with an error message correctly 1`] = `
<div
  className="xui-textinputwrapper"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <div
    className="xui-textinput xui-textinput-standard xui-textinput-is-invalid"
    data-automationid={undefined}
  >
    <input
      aria-describedby="newTest-message"
      aria-invalid={true}
      aria-label={undefined}
      aria-labelledby="newTest"
      className="xui-textinput--input xui-textinput--input-standard"
      data-automationid={undefined}
      defaultValue={undefined}
      disabled={undefined}
      id="newTest-control"
      onBlurCapture={[Function]}
      onChange={[Function]}
      onFocusCapture={[Function]}
      placeholder={undefined}
      rows={undefined}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      type={undefined}
      value={undefined}
    />
  </div>
  <div
    className="xui-validation xui-validation-layout xui-validation-is-invalid"
    data-automationid={undefined}
    id="newTest-message"
    role="status"
  >
    Boo
  </div>
</div>
`;

exports[`<XUITextInput> Validation and hints renders with a hint message if one is provided and the input is valid 1`] = `
<div
  className="xui-textinputwrapper"
  onClick={undefined}
  onKeyDown={undefined}
  role="presentation"
>
  <div
    className="xui-textinput xui-textinput-standard"
    data-automationid={undefined}
  >
    <input
      aria-describedby="newTest-message"
      aria-invalid={undefined}
      aria-label={undefined}
      aria-labelledby="newTest"
      className="xui-textinput--input xui-textinput--input-standard"
      data-automationid={undefined}
      defaultValue={undefined}
      disabled={undefined}
      id="newTest-control"
      onBlurCapture={[Function]}
      onChange={[Function]}
      onFocusCapture={[Function]}
      placeholder={undefined}
      rows={undefined}
      style={
        Object {
          "maxHeight": undefined,
        }
      }
      type={undefined}
      value={undefined}
    />
  </div>
  <div
    className="xui-validation xui-validation-layout"
    data-automationid={undefined}
    id="newTest-message"
    role="status"
  >
    Boo
  </div>
</div>
`;
